--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,18 +26,17 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   firebase_core: ^0.4.0+9
   fancy_bottom_navigation: ^0.3.2
+  flutter_screenutil: ^0.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -46,6 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
